--- a/SharpMinds/Main.Master
+++ b/SharpMinds/Main.Master
@@ -11,17 +11,26 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <title></title>
-    <link href="Content/bootstrap.css" rel="stylesheet" />
+    
+   
+
+    <title>Sharp Minds </title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	 <link href="Content/bootstrap.css" rel="stylesheet" />
     <link href="Content/bootstrap-theme.css" rel="stylesheet" />
     <link href="Content/MyStyle.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body>
+<body class="container">
     <form id="form1" runat="server">
         <uc1:Header runat="server" ID="Header" />
         <div class="row">
+            <div id="banner-wrapper">
+			<div class="container">
+
+				<div id="banner">
+					
             <div class="col-md-2">
                 <uc1:Menu runat="server" ID="Menu" />
             </div>
@@ -36,14 +45,20 @@
                     </asp:ContentPlaceHolder>
                 </div>
             </div>
+				</div>
+
+			</div>
+		</div>
+
         </div>
 
 
 
         <uc1:Footer runat="server" ID="Footer" />
     </form>
-    <script src="Scripts/bootstrap.js"></script>
     <script src="Scripts/jquery-1.9.0.intellisense.js"></script>
     <script src="Scripts/jquery-1.9.0.js"></script>
+    <script src="Scripts/bootstrap.js"></script>
+    
 </body>
 </html>
